# VocabularyLearningApp

./: .gitignore  .~lock.BetaVersionReport.odt#  Procfile  README.md  databaseLayout.sql  db.sqlite3  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt
WeeklyReports/: BetaVersionReport.odt  week05_11_04_04_2021.md  week08_14_03_2021.md  week15_21_2021.md  week22_28_03_2021.md  week23_19_04_04_2021.md  week26_04_02_05_2021.md  week29_03_04_04_2021.md  weeklyReportTemplate.md
api/: admin.py  models.py  serializers.py  tasks.py  views.py
api/migrations/: 0001_initial.py  0002_alter_cards_front.py
backend/: celery.py  settings.py  urls.py  wsgi.py
backend/api/: admin.py  models.py  serializers.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_alter_users_username.py  0003_auto_20210416_0552.py  0004_auto_20210416_0555.py  0005_cards_decks.py
backend/backend/: settings.py  urls.py
frontend/: package.json
frontend/public/: index.html  sampleDecks.json
frontend/src/: App.js  index.js
frontend/src/components/: App.js  Cards.js  Decks.js  EditCard.js  Footer.js  Home.js  Left.js  LogIn.js  Navbbar.js  Right.js  (+1 more)
public/: index.html  sampleCards.json
src/: App.js  index.css
src/components/: App.js  BrowseCard.js  Cards.js  CustomDeck.js  CustomForm.js  Deck.js  Decks.js  EditCard.js  Home.js  Left.js  List.js  LogIn.js  Navbbar.js  NotFound.js  Right.js  SignUp.js  Study.js  paths.js
src/hooks/: useGetData.js  usePostData.js
vocs/: asgi.py  package-lock.json  package.json  settings.py  urls.py  wsgi.py
(+6 files in other folders)
