[tool.poetry]
name = "djrapp"
version = "0.1.0"
description = ""
authors = ["TetianaHrunyk <tetiana.hrunyk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
Django = "^3.2"
djangorestframework = "^3.12.4"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.8.6"
django-on-heroku = "^1.1.2"
django-cors-headers = "^3.7.0"
djangorestframework-jwt = "^1.11.0"
dj-database-url = "^0.5.0"
django-cors-middleware = "^1.5.0"
celery = "^5.0.5"
django-celery-beat = "^2.2.0"
redis-server = "^6.0.9"
redis = "^3.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
